[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://src/ui/board_visual.gd" id="1_board"]

[node name="BoardVisual" type="Node2D"]
script = ExtResource("1_board")

[node name="TileLayer" type="Node2D" parent="."]

[node name="SlotLayer" type="Node2D" parent="."]

[node name="StallContainer" type="Node2D" parent="."]

[node name="GuestContainer" type="Node2D" parent="."]
